[project]
name = "agentic-rag"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.3.1",
    "chromadb>=1.5.9",
    "isort>=8.0.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.24",
]
